# azsql-retention-planner

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: build-api.yml  build-frontend.yml
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
api/src/: handlers.rs  main.rs  pricing.rs
src/: app.tsx  cost-graph.tsx  index.css  main.tsx  types.ts
src/components/: AllDatabasesCostGraph.tsx  CostResults.tsx  DatabaseConfiguration.tsx  DatabaseManagement.tsx  ThemeToggle.tsx  backup-timeline.tsx  backup-visualizations.tsx  cost-graph.tsx
src/contexts/: ThemeContext.tsx
src/lib/: cost-calculator.test.ts  cost-calculator.ts
src/services/: azure-pricing-api.ts  azure-pricing.ts
src/styles/: app.css  backup-timeline.css  backup-visualizations.css
