[package]
name = "azure-pricing-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
